--- a/christ-web/pom.xml
+++ b/christ-web/pom.xml
@@ -2,20 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>christ</artifactId>
+        <groupId>org.youngguang</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.youngguang</groupId>
-    <artifactId>christ</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>christ-web</module>
-        <module>christ-core</module>
-    </modules>
-
-
-
+    <artifactId>christ-web</artifactId>
 
 
 </project>
